Can't select "Face area" in average normals operator #59870

Closed
opened 2018-12-26 15:16:16 +01:00 by Michael Soluyanov · 8 comments

Average type in 2.79 selects from t-panel. In 2.80 it was removed so no way to select average type

Before:

Снимок экрана от 2018-12-26 17-03-31.png

After:

Снимок экрана от 2018-12-26 17-00-33.png

Simple fix:

--- source/blender/editors/mesh/editmesh_tools.c
+++ source/blender/editors/mesh/editmesh_tools.c
@@ -7940,7 +7940,7 @@ void MESH_OT_average_normals(struct wmOperatorType *ot)
 
 	ot->prop = RNA_def_enum(ot->srna, "average_type", average_method_items, EDBM_CLNOR_AVERAGE_LOOP,
 	                        "Type", "Averaging method");
-	RNA_def_property_flag(ot->prop, PROP_HIDDEN);
+	RNA_def_property_flag(ot->prop, PROP_EDITABLE);
 
 	RNA_def_int(ot->srna, "weight", 50, 1, 100, "Weight", "Weight applied per face", 1, 100);
 
Average type in 2.79 selects from t-panel. In 2.80 it was removed so no way to select average type Before: ![Снимок экрана от 2018-12-26 17-03-31.png](https://archive.blender.org/developer/F6077377/Снимок_экрана_от_2018-12-26_17-03-31.png) After: ![Снимок экрана от 2018-12-26 17-00-33.png](https://archive.blender.org/developer/F6077381/Снимок_экрана_от_2018-12-26_17-00-33.png) Simple fix: ``` --- source/blender/editors/mesh/editmesh_tools.c +++ source/blender/editors/mesh/editmesh_tools.c @@ -7940,7 +7940,7 @@ void MESH_OT_average_normals(struct wmOperatorType *ot) ot->prop = RNA_def_enum(ot->srna, "average_type", average_method_items, EDBM_CLNOR_AVERAGE_LOOP, "Type", "Averaging method"); - RNA_def_property_flag(ot->prop, PROP_HIDDEN); + RNA_def_property_flag(ot->prop, PROP_EDITABLE); RNA_def_int(ot->srna, "weight", 50, 1, 100, "Weight", "Weight applied per face", 1, 100); ```
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

@crantisz : thx spotting this
@mont29 : do you have an idea why this is not exposed in the UI?

@crantisz : thx spotting this @mont29 : do you have an idea why this is not exposed in the UI?

Added subscriber: @ZedDB

Added subscriber: @ZedDB

@lichtwerk I'll mark this as confirmed then.

@lichtwerk I'll mark this as confirmed then.
Bastien Montagne self-assigned this 2018-12-27 17:34:11 +01:00

No real reason to hide that prop indeed, not sure why it was done that way in the beginning…

No real reason to hide that prop indeed, not sure why it was done that way in the beginning…

This issue was referenced by c55c15bb77

This issue was referenced by c55c15bb775095a68ee3f2e68b052d2a8166417a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59870
No description provided.