Fix T59870: Can't select "Face area" in average normals operator.

Not sure why the mode prop was hidden at all, tbh...